[gd_scene load_steps=17 format=3 uid="uid://duqanjqofiqy2"]

[ext_resource type="Script" uid="uid://mqf81qrmeos" path="res://scripts/menu.gd" id="1_5mbse"]
[ext_resource type="Script" uid="uid://h2ubv3t7qsjy" path="res://scripts/menucam.gd" id="2_dfy5j"]
[ext_resource type="PackedScene" uid="uid://c3r0gl516bt40" path="res://assets/3d/road_temp.glb" id="2_r3g3c"]
[ext_resource type="Theme" uid="uid://5nsxtmf0cw8u" path="res://scenes/Menu.tres" id="2_yt8fu"]
[ext_resource type="PackedScene" uid="uid://cknkwf45wt35w" path="res://assets/3d/tree_temp.glb" id="3_3vvtq"]
[ext_resource type="Texture2D" uid="uid://bwsftepgrv6oe" path="res://assets/images/logotemporary.png" id="4_3vvtq"]
[ext_resource type="Script" uid="uid://cpny8b1ylg8y5" path="res://scripts/car.gd" id="6_7yvfd"]
[ext_resource type="PackedScene" uid="uid://ymbmajn3a8ya" path="res://scenes/cami.tscn" id="8_yt8fu"]
[ext_resource type="AudioStream" uid="uid://boctiaeexkja2" path="res://assets/audio/oudijzer.mp3" id="9_yt8fu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yt8fu"]
bg_color = Color(0, 0, 0, 0.4)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 0)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfy5j"]
bg_color = Color(0, 0, 0, 0.49803922)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 0)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_dfy5j"]
dof_blur_near_enabled = true
dof_blur_near_distance = 6.0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7q3kq"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_5mbse"]
sky_material = SubResource("ProceduralSkyMaterial_7q3kq")

[sub_resource type="Environment" id="Environment_natt5"]
background_mode = 2
sky = SubResource("Sky_5mbse")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s5g8n"]
albedo_color = Color(0.59, 0.51919997, 0.354, 1)

[node name="Node3D" type="Node3D"]

[node name="ui" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5mbse")

[node name="Buttons" type="PanelContainer" parent="ui/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 6.0
offset_right = 167.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_yt8fu")

[node name="MarginContainer" type="MarginContainer" parent="ui/Control/Buttons"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ui/Control/Buttons/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="ui/Control/Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yt8fu")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="spacer" type="Control" parent="ui/Control/Buttons/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="Options" type="Button" parent="ui/Control/Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="spacer2" type="Control" parent="ui/Control/Buttons/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="Exit" type="Button" parent="ui/Control/Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit
"

[node name="Settings" type="PanelContainer" parent="ui/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -128.0
offset_right = 120.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dfy5j")

[node name="MarginContainer" type="MarginContainer" parent="ui/Control/Settings"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ui/Control/Settings/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ui/Control/Settings/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ui/Control/Settings/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "Options"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="ui/Control/Settings/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ui/Control/Settings/MarginContainer/HBoxContainer/VBoxContainer/Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 60.0
offset_right = 302.0
offset_bottom = 170.0
text = "actual settings coming when we make the game lmao"
fit_content = true

[node name="options" type="Button" parent="ui/Control/Settings/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.4336605, 4.6083984, 0.97271824)
attributes = SubResource("CameraAttributesPractical_dfy5j")
script = ExtResource("2_dfy5j")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_natt5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 20, 0)
light_energy = 0.2
shadow_enabled = true

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(7.200467, 0, 0, 0, 1, 0, 0, 0, 1, -5.5348206, 0, -36.146393)
size = Vector3(18.058167, 1, 116.671936)
material = SubResource("StandardMaterial3D_s5g8n")

[node name="Road" parent="." instance=ExtResource("2_r3g3c")]
transform = Transform3D(81.65783, 0, 0, 0, 10, 0, 0, 0, 10, -3.815592, 0.47070646, -10.915129)

[node name="Trees" type="Node" parent="."]

[node name="tree_temp" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -35.749996, 0.35534048, -18.262314)

[node name="tree_temp2" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -20.903841, -0.24103785, -18.262312)

[node name="tree_temp3" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -29.586042, -0.7570014, -18.262308)

[node name="tree_temp4" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -14.205837, -2.4506888, -18.262306)

[node name="tree_temp5" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -25.272678, -5.768126, -18.262308)

[node name="tree_temp6" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -18.106716, -3.772015, -18.262308)

[node name="tree_temp7" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -32.724396, -1.9614549, -18.262308)

[node name="tree_temp8" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -2.2271538, -1.1920857, -18.262308)

[node name="tree_temp9" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -8.620092, -3.0125937, -18.262308)

[node name="tree_temp10" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -5.5077667, -5.527017, -18.262308)

[node name="tree_temp11" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 2.8522701, -1.1293855, -18.26231)

[node name="tree_temp12" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 7.4074135, -4.371206, -18.26231)

[node name="tree_temp13" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 14.357957, -3.7926745, -18.26231)

[node name="tree_temp14" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -3.6111479, -4.1265683, -2.6423779)

[node name="tree_temp15" parent="Trees" instance=ExtResource("3_3vvtq")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -13.163408, -3.8182168, -2.6423779)

[node name="Wall" type="CSGBox3D" parent="."]
transform = Transform3D(149.71939, 0, 0, 0, 1.7977414, 0, 0, 0, 1, 0, 6.955824, -41.283447)
size = Vector3(1, 7.692993, 1)

[node name="Logo" type="Sprite3D" parent="."]
transform = Transform3D(1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, -8.090498, 6.840866, -15.785511)
texture = ExtResource("4_3vvtq")

[node name="3dsplashtext" type="Label3D" parent="Logo"]
transform = Transform3D(1.0000001, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0, -1.1764708, 0)
text = "splashtextsplashtext"
font_size = 100
outline_size = 0

[node name="startpoint1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.305, 1.039, -8.994)

[node name="endpoint1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 1.039, -8.994)

[node name="endpoint2" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -37.305, 1.039, -13)

[node name="startpoint2" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 24, 1.039, -13)

[node name="Van" type="Node3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -25.743507, 1.0385226, -8.257942)
script = ExtResource("6_7yvfd")

[node name="cami2" parent="Van" instance=ExtResource("8_yt8fu")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Van"]
stream = ExtResource("9_yt8fu")
max_distance = 20.0
doppler_tracking = 2

[connection signal="pressed" from="ui/Control/Buttons/MarginContainer/HBoxContainer/Play" to="ui/Control" method="_on_play_pressed"]
[connection signal="pressed" from="ui/Control/Buttons/MarginContainer/HBoxContainer/Options" to="ui/Control" method="_on_options_pressed"]
[connection signal="pressed" from="ui/Control/Buttons/MarginContainer/HBoxContainer/Exit" to="ui/Control" method="_on_exit_pressed"]
[connection signal="pressed" from="ui/Control/Settings/MarginContainer/HBoxContainer/VBoxContainer/options" to="ui/Control" method="_on_options_pressed"]
